# boringtun.js

./: .eslintrc.js  .gitignore  .gitmodules  .npmignore  .prettierrc.js  CMakeLists.txt  README.md  build-boringtun.sh  eslint.config.js  index.js  jest.config.js  package-lock.json  package.json
.github/workflows/: build-macos-m1.yml  build-release-boringtunjs.yml  ci.yml
install/: postinstall.js
lib/: boringtun.cpp  reference_singleton.cpp  reference_singleton.h  utils.h  wireguard_global_wrapper.cpp  wireguard_global_wrapper.h  wireguard_tunnel.cpp  wireguard_tunnel.h  wireguard_tunnel_wrapper.cpp  wireguard_tunnel_wrapper.h
src/: peer.js  tunnel.js  wireguard-tunnel.js  wireguard.js
src/crypto/: blake2s.js  chacha20poly1305.js  noise-helpers.js  noise.js
src/protocols/: constants.js  dns-message.js  dns-resolver.js  ip-layer.js  ip4-address.js  ip4-packet.js  socket-stream.js  tcp-container.js  tcp-message.js  tcp-stream.js  udp-client.js  udp-container.js  udp-message.js  udp-stream.js  utils.js
src/utils/: deque.js  logger.js
tests/: bindings.spec.js  crypto.spec.js  dns-message.spec.js  net-protocols.spec.js  tunnel.spec.js
